--- a/scss/imports/_table.scss
+++ b/scss/imports/_table.scss
@@ -10,7 +10,7 @@
   }
 }
 
-.table__header {
+.table-header {
   th {
     height: 4rem;
     font-size: .8125rem;
@@ -28,7 +28,7 @@
   }
 }
 
-.table__item {
+.table-item {
   td {
     height: 4rem;
     vertical-align: middle;
